--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -8,7 +8,12 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+    <div class="container">
+      <header class="header">
+        <h1 id="title" class="text-center">Francis and Andile form</h1>
+        <p id="description" class="description text-center">
+          Thank you for taking the time to help us improve the platform
+        </p>
     <script src="js/index.js"></script>
   </body>
 </html>
