--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -14,6 +14,19 @@
         <p id="description" class="description text-center">
           Thank you for taking the time to help us improve the platform
         </p>
+      </header>
+      <form id="survey-form">
+        <div class="form-group">
+          <label id="name-label" for="name">Name</label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class="form-control"
+            placeholder="Enter your name"
+            required
+          />
+        </div>
     <script src="js/index.js"></script>
   </body>
 </html>
