--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="form-group">
-          <p>Would you recommend freeCodeCamp to a friend?</p>
+          <p>Would you recommend free courses to your friends?</p>
           <label>
             <input
               name="user-recommend"
@@ -86,7 +86,7 @@
         
     <div class="form-group">
       <p>
-        What is your favorite feature of freeCodeCamp?
+        What is your favorite course?
       </p>
       <select id="most-like" name="mostLike" class="form-control" required>
         <option disabled selected value>Select an option</option>
@@ -96,6 +96,14 @@
         <option value="openSource">Open Source</option>
       </select>
     </div>
+
+    <div class="form-group">
+      <button type="submit" id="submit" class="submit-button">
+        Submit
+      </button>
+    </div>
+  </form>
+</div>
 
     <script src="js/index.js"></script>
   </body>
