--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -27,6 +27,17 @@
             required
           />
         </div>
+        <div class="form-group">
+          <label id="email" for="name">Email</label>
+          <input
+            type="text"
+            name="email"
+            id="email"
+            class="form-control"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
 
         <div class="form-group">
           <label id="number-label" for="number"
@@ -73,7 +84,7 @@
               class="input-radio"
             />Maybe</label
           >
-    
+
           <label
             ><input
               name="user-recommend"
@@ -83,27 +94,25 @@
             />Not sure</label
           >
         </div>
-        
-    <div class="form-group">
-      <p>
-        What is your favorite course?
-      </p>
-      <select id="most-like" name="mostLike" class="form-control" required>
-        <option disabled selected value>Select an option</option>
-        <option value="challenges">Challenges</option>
-        <option value="projects">Projects</option>
-        <option value="community">Community</option>
-        <option value="openSource">Open Source</option>
-      </select>
-    </div>
 
-    <div class="form-group">
-      <button type="submit" id="submit" class="submit-button">
-        Submit
-      </button>
+        <div class="form-group">
+          <p>What is your favorite course?</p>
+          <select id="most-like" name="mostLike" class="form-control" required>
+            <option disabled selected value>Select an option</option>
+            <option value="challenges">Challenges</option>
+            <option value="projects">Projects</option>
+            <option value="community">Community</option>
+            <option value="openSource">Open Source</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <button type="submit" id="submit" class="submit-button">
+            Submit
+          </button>
+        </div>
+      </form>
     </div>
-  </form>
-</div>
 
     <script src="js/index.js"></script>
   </body>
