--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -28,13 +28,13 @@
           />
         </div>
         <div class="form-group">
-          <label id="email" for="name">Email</label>
+          <label id="email-label" for="email">Email</label>
           <input
-            type="text"
+            type="email"
             name="email"
             id="email"
             class="form-control"
-            placeholder="Enter your email"
+            placeholder="Enter your Email"
             required
           />
         </div>
@@ -105,6 +105,34 @@
             <option value="openSource">Open Source</option>
           </select>
         </div>
+
+        <label
+        ><input
+          name="prefer"
+          value="open-source-community"
+          type="checkbox"
+          class="input-checkbox"
+        />Open Source Community</label
+      >
+      <label
+        ><input
+          name="prefer"
+          value="gitter-help-rooms"
+          type="checkbox"
+          class="input-checkbox"
+        />Gitter help rooms</label
+      >
+
+      <div class="form-group">
+        <p>Any comments or suggestions?</p>
+        <textarea
+          id="comments"
+          class="input-textarea"
+          name="comment"
+          placeholder="Enter your comment here..."
+        ></textarea>
+      </div>
+  
 
         <div class="form-group">
           <button type="submit" id="submit" class="submit-button">
